# recollect-tcg

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  architecture.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy-image.yml  mutation.yml  nightly.yml  site-deploy.yml
app/: .gitignore  Cargo.toml  deny.toml  rust-toolchain.toml
app/.cargo/: config.toml.example  mutants.toml
app/crates/recollect-bot/: Cargo.toml
app/crates/recollect-bot/src/: agent.rs  evidence.rs  lib.rs  main.rs
app/crates/recollect-bot/tests/: main.rs
app/crates/recollect-bot/tests/suites/: agent.rs  fleet_tripwires.rs  selfplay.rs  solace_winnability.rs
app/crates/recollect-cli/: Cargo.toml
app/crates/recollect-cli/examples/: tui_capture.rs
app/crates/recollect-cli/src/: headless.rs  lib.rs  local.rs  main.rs  online.rs  render.rs  tui.rs  tui_gallery.rs  verbs.rs
app/crates/recollect-cli/tests/: cursor_tui.rs  online_roundtrip.rs  tui_gallery.rs
app/crates/recollect-core/: Cargo.toml
app/crates/recollect-core/data/: card_keys.json  card_keywords.json  cards.toml  catalog.json  effects.json  evolution_lines.json  evolution_split.json
app/crates/recollect-core/src/: aggregate.rs  cards.rs  effects.rs  invariants.rs  lib.rs  quickplay.rs  rng.rs  state.rs  types.rs  view.rs
app/crates/recollect-core/src/effects/: support.rs
app/crates/recollect-core/src/engine/: aura_helpers.rs  choice_effects.rs  clause.rs  combat.rs  combat_stats.rs  conditions.rs  decide.rs  decide_arrival.rs  decide_spellbook.rs  effects_exec.rs  effects_fire.rs  effects_phases.rs  evolve.rs  flow.rs  mod.rs  projection.rs  strays.rs  throughline.rs
app/crates/recollect-core/src/state/: events.rs
app/crates/recollect-core/tests/: canon.rs  golden_replay.rs  main.rs
app/crates/recollect-core/tests/common/: mod.rs
app/crates/recollect-core/tests/suites/: action_economy.rs  auras.rs  bond_auras.rs  card_effects_fire.rs  carrier_exceptions.rs  choice_engage_fabrication.rs  d1_evolution_window.rs  d4_cluster.rs  decide_rejects.rs  deck_themes.rs  determinism.rs  devolution.rs  effects_backlog.rs  effects_choices.rs  effects_coverage.rs  effects_engine.rs  effects_red_team.rs  evolution_arrivals.rs  evolve.rs  fabrication_traps.rs  flow_effects.rs  fuzz.rs  journaled_seam.rs  keywords.rs  lurk.rs  m1_backlog.rs  mulligan.rs  props.rs  quickplay.rs  reach_auras.rs  recover.rs  redaction.rs  redteam_playthrough.rs  redteam_rules_change.rs  render_contract.rs  restrictions.rs  rule_exceptions.rs  rules.rs  security.rs  solace.rs  (+11 more)
app/crates/recollect-determinism/: Cargo.toml
app/crates/recollect-determinism/src/: main.rs
app/crates/recollect-ffi/: Cargo.toml
app/crates/recollect-ffi/src/: lib.rs
app/crates/recollect-journal-postgres/: Cargo.toml
app/crates/recollect-journal-postgres/src/: lib.rs  store.rs
app/crates/recollect-journal-postgres/tests/: journal_async.rs  journal_contract.rs
app/crates/recollect-journal-postgres/tests/common/: mod.rs
app/crates/recollect-protocol/: Cargo.toml
app/crates/recollect-protocol/src/: lib.rs
app/crates/recollect-protocol/tests/: wire_formats.rs
app/crates/recollect-server/: Cargo.toml
app/crates/recollect-server/src/: actor.rs  crypto.rs  identity.rs  lib.rs  main.rs  match_settings.rs  matchmaking.rs  metrics.rs  session.rs  telemetry.rs  ws.rs
app/crates/recollect-verify/: Cargo.toml
app/crates/recollect-verify/src/: lib.rs  model.rs  solace_modelcheck.rs
app/crates/recollect-verify/tests/: solace_bridge.rs
app/crates/recollect-web/: Cargo.toml  Trunk.toml  index.html  play.css
app/crates/recollect-web/examples/: shell_preview.rs
app/crates/recollect-web/shell/: README.md  index.html
app/crates/recollect-web/src/: atlas.rs  font.rs  lib.rs  online.rs  render.rs  scene.rs  shell.rs  texture.rs
assets/cards-src/: .gitkeep
deploy/: README.md  smoke.sh  smoke_game.py
deploy/compose/: Dockerfile.site  Dockerfile.site.dockerignore  build-site.sh  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.local-full.yml  docker-compose.local.yml
deploy/compose/observability/: cloudwatch-agent.json
deploy/helm/recollect/: Chart.yaml  values.yaml
deploy/pulumi/: create-state-bucket.sh  preflight.sh
deploy/pulumi/foundation/: .gitignore  Pulumi.yaml  go.mod  go.sum  index.ts  main.go  package-lock.json  package.json
deploy/pulumi/platform/: .gitignore  Pulumi.yaml  go.mod  go.sum  index.ts  main.go  package-lock.json  package.json  tsconfig.json  user-data.sh
deploy/site/: README.md
docs/: best-practices.md  cards_design.md  design.md  difficulty.md  engine.md  how_to_play.md  how_to_play_cli.md  lore.md  manual_verification.md  observability.md  operations.md  roadmap.md  rules_coverage.md  tech_design.md  testing.md
docs/decisions/: 2v2_fairness_run.md  bot_action_mix.md  bot_and_ml_plan.md  brand_and_accessibility.md  card_images.md  naming.md  playtest_launch_plan.md  recollect_balance_decisive_retune.md  usage_tracking.md  web_client_ux.md  web_renderer_wgpu.md  website_plan.md
docs/gallery/: README.md
docs/gallery/tui/: cursor-board.txt  cursor-glimpse.txt  cursor-pickup.txt  tui-board.txt  tui-glimpse-burn.txt  tui-glimpse-keep-bottom.txt  tui-inspect.txt  tui-mulligan.txt  tui-result.txt
docs/gallery/web/: clip-inspect-a-card-desktop.webm  (+3 more)
scripts/: kind-integration.sh
site/: cards.html  cards.js  contact.html  feedback.html  guide.html  index.html  lore.html  options.js  play.html  rules.html
site/css/: brand.css
tools/: gen_card_art.py  gen_cards_page.py  gen_catalog.py  gen_gallery.sh  gen_lore_page.py  gen_tui_gallery.sh  gen_tui_shots.sh  lore_extract.py  restat.py  validate_cards.py
tools/cardpipe/: Cargo.toml
tools/cardpipe/src/: main.rs
tools/tui_tapes/: _common.tape  board.tape  cursor.tape  glimpse.tape  inspect.tape  mulligan.tape  pickup.tape  result.tape
tools/uitest/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  serve.mjs
(+45 files in other folders)
