[package]
name = "recollect-verify"
publish = false       # proprietary; never publish to crates.io
version.workspace = true
edition.workspace = true

[dependencies]
recollect-core = { path = "../recollect-core" }
stateright = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "solace-modelcheck"
path = "src/solace_modelcheck.rs"

[dev-dependencies]
stateright = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
